--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+  direction: rtl;
 }
 
 .login-container {
@@ -71,4 +72,5 @@ input, select {
   display: block;
   width: 100%;
   margin: 5px 0;
+
 }
